# zero2prod

./: Cargo.toml  Dockerfile  README.md  deny.toml  spec.yaml
.github/workflows/: general.yml
configuration/: docker.yaml
migrations/: 20240518175707_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
supply-chain/: audits.toml  config.toml
tests/: health_check.rs
